# openclaw-workspace

./: .env.example  .gitignore  AGENTS.md  AVOID_LLM_CALLS.md  BATCH_PROCESSOR_IMPROVEMENTS.md  BATCH_REFACTOR_README.md  DEPRECATED_FILES.md  DREAMS.md  FEISHU_FILE_HANDLING.md  MULTI_AGENTS.md  OPENCLAW_INTEGRATION.md  OPENCLAW_TIMEOUT_FIX.md  PIPELINE_CONFIG.md  PIPELINE_QUICKSTART.md  PIPELINE_USAGE_GUIDE.md  README.md  SECOND_COMPUTER_SETUP.md  SECURITY.md  STANDARD_USAGE.md  batch_processor_core.py  batch_runner.py  config.py  creator_grid_pipeline.py  example_batch_usage.py  generate_restock_report.py  migrate_batch_system.py  notify_openclaw.py  openclaw_core.py  pipeline_manager.sh  process_11_15_creators.py  process_16_20_creators.py  process_21_25_creators.py  process_26_30_creators.py  process_5_creators.py  process_6_10_creators.py  process_creators.py  process_creators_with_browser.py  process_grid_task.py  product-type-resolution-dev-plan.md  run_pipeline_wrapper.sh  (+7 more)
auto_mixcut/: README.md  pyproject.toml
auto_mixcut/auto_mixcut/: cli.py
auto_mixcut/config/: ai_segment_factory.yaml  ai_segment_factory_config.yaml  effective_role_rules.yaml  feishu_tables.json  gap_and_template.yaml  llm_router.json  prompt_bank.yaml  prompt_variables.yaml  quality_gate.yaml  templates.yaml
auto_mixcut/docs/: ai_image_generation_auth.md  bgm_sourcing.md  feishu_table_schema.md  feishu_workbench.md  intern_review_sop.md  oss_cutover.md  prompts.md  rule_tuning_notes.md
auto_mixcut/migrations/: 001_mysql_init.sql  001_sqlite_init.sql  002_ai_segment_factory.sql  (+3 more)
(+815 files in other folders)
