[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-mixcut"
version = "0.1.0"
description = "TikTok Shop product intelligent mixcut pipeline"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
auto_mixcut = "auto_mixcut.cli:main"

[tool.setuptools.packages.find]
where = ["."]
